fix(bottomMenu): bottom menu being hidden by taskbar

--- a/src/components/Account/AccountBottomMenu/BottomMenu.module.css
+++ b/src/components/Account/AccountBottomMenu/BottomMenu.module.css
@@ -1,16 +1,13 @@
 .bottomMenuContainer {
   position: relative;
   width: 100%;
-  margin-top: 10px;
-  left: 50%;
-  right: 50%;
-  z-index: 1000;
-  transform: translateX(-50%);
+  height: 5vh;
+  border: 1px solid red;
 }
 
 .bottomMenu {
-  position: absolute;
-  top: 50%;
+  position: fixed;
+  bottom: 5.6%;
   left: 50%;
   right: 50%;
   z-index: 1000;
@@ -25,14 +22,13 @@
   align-items: center;
 
   background-color: #0d0d0d;
-
+  /* border: 0.5px solid #e0e0e02e; */
   border-radius: 10px;
 }
 
 .bottomMenuBorder {
-  position: absolute;
-  top: 50%;
-
+  position: fixed;
+  bottom: 5.4%;
   left: 50%;
   right: 50%;
   z-index: 999;
